libs/config/tests/errors/ce2_invalid_value_macro/stdout.ansi
[31m[CE2] Error:[0m macro's result could not be parsed
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:5:8[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249mp[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201mP[0m[38;5;201mA[0m[38;5;201mT[0m[38;5;201mH[0m[38;5;201mT[0m[38;5;201mO[0m[38;5;249m([0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m        [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m           [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m invalid macro result
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: perhaps this macro has a `Q_` variant or you need `QUOTE(..)`
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: The processed output was `[38;5;201m\some\thing[0m`
[38;5;246m───╯[0m

[31m[CE2] Error:[0m macro's result could not be parsed
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:7:12[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201mP[0m[38;5;201mA[0m[38;5;201mT[0m[38;5;201mH[0m[38;5;201mT[0m[38;5;201mO[0m[38;5;249m([0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m            [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m               [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m invalid macro result
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: perhaps this macro has a `Q_` variant or you need `QUOTE(..)`
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: The processed output was `[38;5;201m\some\thing[0m`
[38;5;246m───╯[0m
